--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<titl>Awesomenxess Page<title>
+<title>Awesomeness Page<title>
 </head>
-body>
+<body>
 
 <h2>Valparaso University</h2>
 <h3>is Awesome<h3>
